sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: type getValue
    var elementVal : Int getValue(it)
                         ^AlgInsertionSort:8: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
    var elementVal : Int getValue(it)
        ^AlgInsertionSort:8: error: local variables must be initialized
    var elementVal : Int getValue(it)
        ^