sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n : Int =getValueCount()
  
  for(it<-1 to n-1){
    
    var elementId : Int = it
    var elementVal : Int getValue(it)
    while(elementId >0 && !isSmallerThan(elementId-1,elementVal)){
      swap(elementId,elementId-1)
      elementId-=1
    }
    
  }
}